# JobPostCounterCpp

./: CMakeLists.txt  README.md  build.ps1  install_task.ps1  run.ps1
.github/workflows/: daily-job-post-counter.yml  daily-loosegrown-price-tracker.yml  pages.yml  record-jobkorea-count.yml  test-failure-notification.yml  test-fetch-only.yml
LooseGrownDiamondPriceTrackerCpp/: README.md
LooseGrownDiamondPriceTrackerCpp/data/: loosegrown_price_history.csv  loosegrown_tradingview_chart.html
aws-lambda/: index.mjs
data/: job_post_counts.csv  job_post_counts.xlsx
docs/: charts.html  weekly-candles.html
naver-cloud-functions/: README.md  jobkorea_dispatcher.js
scripts/: check_anomaly.ps1  normalize_daily_records.ps1  record_external_count.ps1
src/: main.cpp
